--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -169,7 +169,9 @@ $dialog-width-sm: 552px;
 $dialog-width-md: 664px;
 $dialog-width-lg: 968px;
 
+$font-weight-light: 400;
 $font-weight-normal: 400;
+$font-weight-medium: 500;
 $font-weight-bold: 700;
 
 /* 检索迁移 start */
