--- a/src/pages/SelectToken/index.scss
+++ b/src/pages/SelectToken/index.scss
@@ -3,9 +3,9 @@
     width: 424px;
 
     input::-webkit-input-placeholder {
-      font-size: 16px;
+      font-size: $font-size-lg;
       font-family: Kanit;
-      font-weight: 400;
+      font-weight: $font-weight-normal;
       line-height: 24px;
       color: #afafaf;
     }
@@ -21,12 +21,12 @@
       margin-top: 20px;
       margin-bottom: $margin-lg;
       outline: 0;
-      font-size: 16px;
+      font-size: $font-size-lg;
     }
 
     .sub-title {
-      font-size: 16px;
-      font-weight: 500;
+      font-size: $font-size-lg;
+      font-weight: $font-weight-bold;
       color: #0a1629;
       padding-bottom: $padding-xs;
       border-bottom: 1px solid #d8e0f0;
@@ -36,13 +36,12 @@
       max-height: 200px;
       overflow: auto;
       .token-list-item {
-        height: 48px;
-        // margin-top: 16px;
+        height: $height-xl;
         cursor: pointer;
         display: flex;
         align-items: center;
-        font-size: 14px;
-        font-weight: 500;
+        font-size: $font-size-base;
+        font-weight: $font-weight-bold;
         color: #0a1629;
       }
 
