--- a/src/pages/Submit/index.scss
+++ b/src/pages/Submit/index.scss
@@ -2,20 +2,9 @@
   .ant-modal-content {
     width: 600px;
     height: 544px;
-    background: $white;
-    box-shadow: 0px 6px 58px rgba(121, 145, 173, 0.2);
-    border-radius: 24px;
-
-    .title {
-      font-size: 18px;
-      font-weight: 600;
-      color: #0a1629;
-      margin-top: 10px;
-      margin-bottom: 12 px;
-    }
 
     .label {
-      font-size: 14px;
+      font-size: $font-size-base;
       line-height: 24px;
       color: #7c7c7c;
       margin-top: $margin-md;
@@ -31,7 +20,7 @@
       border: 1px solid #d8e0f0;
       box-shadow: 0px 1px 2px rgba(184, 200, 224, 0.22);
       border-radius: 14px;
-      font-size: 16px;
+      font-size: $font-size-lg;
       color: #0a1629;
       position: relative;
       > span {
@@ -43,20 +32,6 @@
       }
     }
 
-    .close-btn {
-      width: 44px;
-      height: 44px;
-      background: #f4f9fd;
-      border-radius: 14px;
-      display: inline-block;
-      margin-top: $margin-lg;
-      margin-left: -40px;
-      > img {
-        width: 24px;
-        height: 24px;
-      }
-    }
-
     .generate-btn {
       width: 112px;
       height: 40px;
@@ -65,8 +40,8 @@
       background: $primary-color;
       box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16);
       border-radius: 12px;
-      font-size: 16px;
-      font-weight: 500;
+      font-size: $font-size-lg;
+      font-weight: $font-weight-bold;
       color: $white;
       float: right;
       position: absolute;
@@ -85,7 +60,7 @@
       box-shadow: 0px 6px 12px rgba(63, 140, 255, 0.26);
       border-radius: 14px;
       font-size: 20px;
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       color: $white;
       cursor: pointer;
     }
