--- a/src/components/ErrorModal/index.scss
+++ b/src/components/ErrorModal/index.scss
@@ -1,13 +1,32 @@
 .error-modal {
-  .switch-btn {
-    width: 376px;
-    height: 48px;
-    background: #3f8cff;
-    box-shadow: 0px 6px 12px rgba(63, 140, 255, 0.26);
-    opacity: 1;
-    border-radius: 8px;
-    font-size: 16px;
-    font-weight: 500;
-    color: $white;
+  .ant-modal-content {
+    width: 424px;
+    height: 232px;
+
+    .sub-title {
+      font-size: 16px;
+      font-family: Kanit;
+      font-weight: 400;
+      color: #7c7c7c;
+      padding-top: 14px;
+      margin-bottom: 18px;
+      border-top: 1px solid #d8e0f0;
+      display: inline-block;
+      width: 100%;
+      margin-top: 30px;
+    }
+    .switch-btn {
+      width: 376px;
+      height: 48px;
+      background: $primary-color;
+      border-radius: 8px;
+      font-size: 16px;
+      font-family: Kanit;
+      font-weight: 500;
+      color: $white;
+      line-height: 48px;
+      text-align: center;
+      cursor: pointer;
+    }
   }
 }
