--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,13 +1,26 @@
-.header {
-  margin-right: 40px;
+.header-component {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 30px 50px 30px;
+
+  .logo {
+    width: 25px;
+    height: 30px;
+    cursor: pointer;
+  }
+
+  .menu-components {
+    margin-right: auto;
+    margin-left: 64px;
+  }
+
   .btn {
     padding: 0 $padding-md;
-    height: 48px;
-    line-height: 48px;
-    background: rgba(63, 140, 255, 0.39);
-    box-shadow: 0px 6px 58px rgba(196, 203, 214, 0.1);
-    border-radius: 14px;
-    float: right;
+    height: 40px;
+    line-height: 40px;
+    background: $primary-2;
+    border-radius: 20px;
     color: $primary-color;
     text-align: center;
     cursor: pointer;
