--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -1,23 +1,25 @@
 .header-search {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 412px;
-  height: 48px;
-  background: $white;
-  box-shadow: 0px 6px 58px rgb(196 203 214 / 10%);
-  border-radius: 14px;
-
+  top: 21px;
+  right: 223px;
+  width: 310px;
+  height: 40px;
+  background: rgba(255, 255, 255, 0.44);
+  box-shadow: 0px 6px 58px rgba(196, 203, 214, 0.1);
+  opacity: 0.44;
+  border-radius: 24px;
+  padding-left: 24px;
+  border: 0;
   .icon-search {
     width: 24px;
     height: 24px;
-    margin-right: 10px;
+    margin-right: 8px;
   }
 
   input::-webkit-input-placeholder {
     font-size: 16px;
     font-family: Kanit;
-    font-weight: 400;
+    font-weight: 300;
     color: #7d8592;
   }
 }
