--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,7 +25,9 @@ $margin-sm: 12px; // Form controls and items
 $margin-xs: 8px; // small items
 $margin-xss: 4px; // more small
 
-$primary-color: #3f8cff;
+$primary-color: #6768ac;
+
+$primary-2: rgba($primary-color, 20%);
 
 $scrollbar-thumb-color: $gray-5;
 $scrollbar-thumb-width: 6px;
@@ -82,7 +84,7 @@ $bg-component-color: $main-color;
 $bg-component-hover-color: $main-hover-color;
 $bg-component-active-color: $main-active-color;
 $item-active-bg: $main-color;
-$item-hover-bg: #eaedf2;
+$item-hover-bg: #f4f6fd;
 $shadow-color: rgba($gray-4, 0.7);
 $box-shadow: 0px 5px 20px 0px $shadow-color;
 $body-bg-color: $bg-main-color;
@@ -90,7 +92,7 @@ $module-bg-color: $bg-color;
 $module-border-color: $border-color-base;
 $module-title-bg-color: $bg-color;
 $module-title-border-color: $border-color-base;
-$status-error-color: #ff3e6c;
+$status-error-color: #d56386;
 $status-error-border-color: $status-error-color;
 $status-error-bg-color: #ffeceb;
 $status-warning-color: #ff950c;
@@ -159,48 +161,14 @@ $media-width-992: 992px;
 $media-width-768: 768px;
 $media-width-653: 653px;
 
-// $col-sm: 576px;
-// $col-md: 768px;
-// $col-lg: 992px;
-// $col-xl: 1200px;
-// $col-xxl: 1600px;
-
 $dialog-width-sm: 552px;
 $dialog-width-md: 664px;
 $dialog-width-lg: 968px;
 
-$font-weight-light: 400;
+$font-weight-light: 300;
 $font-weight-normal: 400;
 $font-weight-medium: 500;
 $font-weight-bold: 700;
-
-/* 检索迁移 start */
-
-$red: #eb5352;
-$gray-66: #666666;
-$gray-ed: #ededed;
-$gray-99: #999999;
-$default-shadow-color: rgba(0, 0, 0, 0.07);
-$hover-shadow-color: rgba(0, 0, 0, 0.15);
-$circle-text-color: $white;
-$table-bg-color: #ffffff;
-$graph-show-bg-color: #f4f5f6;
-$ant-tabs-tab-active-color: $white;
-$collect-btn-active-color: #ff950c;
-$graph-others-entity-color: #86889d;
-$graph-show-file-title-color: rgba(17, 17, 17, 1);
-$graph-show-box-shadow-color: $default-shadow-color;
-$graph-show-file-title-color: rgba(17, 17, 17, 1);
-$box-shadow-custom: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
-$hippo-main-color: $main-color;
-$hippo-default-box-shadow: rgba($black, 0.3);
-$hippo-default-box-shadow-light: rgba($black, 0.15);
-$hippo-default-border-color: #e8e8e8;
-$hippo-main-color-light: lighten($hippo-main-color, 30%);
-$search-result-top-bar-bg: #e8e8e8;
-$search-result-search-bar-box-shadow-color: rgba($black, 0.08);
-$result-main-color: $hippo-main-color;
-$skeleton-row-bg: #e6e6e6;
 
 $search-result-left-width: 204px;
 $search-result-right-width: 310px;
@@ -208,8 +176,6 @@ $search-result-right-width: 310px;
 
 $space-lg: 24px;
 $space-md: 16px;
-
-/* 检索迁移 end */
 
 // 2020-10-14 从企业智库迁移
 $white: #ffffff;
@@ -233,118 +199,6 @@ $box-shadow-normal: 0 2px 4px 0 rgba(0, 0, 0, 0.07);
 $box-shadow-custom: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
 $scrollbar-thumb-bg-color: #f7f7f7;
 $selection-color: #ffffff;
-$dictionary-disable-color: rgba(0, 0, 0, 0.25);
-
-// 统一主题色值 2020-02-19
-$main-blue-color: #2a83ff;
-$ant-default-border-color: #d8d8d8;
-$hippo-main-color: $main-color;
-$hippo-body-bg: #e8e8e8;
-$hippo-default-border-color: #e8e8e8;
-$hippo-table-active-row: #fff3d5;
-$result-main-color: $hippo-main-color;
-$hippo-default-text-color: $gray-66;
-$hippo-main-color-light: lighten($hippo-main-color, 30%);
-$hippo-main-color-dark: darken($hippo-main-color, 20%);
-$hippo-default-text-color-light: lighten($hippo-default-text-color, 30%);
-$hippo-default-text-color-dark: darken($hippo-default-text-color, 20%);
-$hippo-default-border-color-dark: darken($hippo-default-border-color, 10%);
-$hippo-file-graph-auto-entity-color: lighten($hippo-main-color, 26%);
-$hippo-default-box-shadow: rgba($black, 0.3);
-$hippo-default-box-shadow-light: rgba($black, 0.15);
-$hippo-item-default-bg: $gray-f9;
-$hippo-item-active-bg: lighten($hippo-main-color, 35%);
-$hippo-item-active-color: $hippo-main-color;
-$hippo-item-hover-bg: rgba($hippo-main-color, 0.08);
-
-$header-bg-color: $white;
-$header-bg-color-dark: #1e5096;
-$header-light-navigation-color: $white;
-$header-navigation-active-color: $hippo-main-color;
-$header-headright-color: #0c0b0b;
-$header-black-navigation-color: $gray-99;
-$header-goback-bg-color: $primary-color;
-$header-goback-color: $white;
-
-$animation-search-bg: darken($header-bg-color-dark, 10%);
-$animation-search-placeholder-color: lighten($header-bg-color-dark, 10%);
-
-$ant-tabs-tab-border-color: $hippo-default-border-color;
-$ant-tabs-tab-active-color: $white;
-
-$header-active-color: $white;
-$uploading-list-box-shadow: rgba(153, 153, 153, 0.7);
-$uploadData-preview-anticon-close-color: #f04134;
-$uploadData-preview-anticon-check-color: #00a854;
-$search-result-search-bar-box-shadow-color: rgba($black, 0.08);
-
-// 检索结果
-$search-result-left-width: 204px;
-$search-result-center-width: 699px;
-$search-result-right-width: 310px;
-$search-result-hightlight-color: #fb2400;
-$search-result-search-bar-box-shadow-color: rgba($black, 0.08);
-$collect-btn-active-color: #ff950c;
-$search-result-top-bar-bg: #e8e8e8;
-$skeleton-row-bg: #e6e6e6;
-$circle-text-color: $white;
-$knowl-srch-theme-bg: #ddebff;
-$search-result-mark-title-color: #226eda;
-$search-result-qa-title-color: $white;
-
-// 文档详情
-$knowl-file-box-shadow-color: $search-result-search-bar-box-shadow-color;
-$knowl-file-common-header-color: #a1a1a5;
-$knowl-file-document-border-color: #e0dfe0;
-$knowl-file-document-mark-background-color: #4b62e6;
-$knowl-file-document-mark-color: #ffffff;
-$knowl-file-document-mark-disabled-background-color: #999999;
-$knowl-file-document-notes-header-color: #999999;
-$knowl-file-document-notes-hover-border-color: #445ff1;
-$knowl-file-document-notes-hover-bg-color: lighten(
-  $knowl-file-document-notes-hover-border-color,
-  10%
-);
-$knowl-file-document-notes-text-color: #3d3d43;
-$knowl-file-document-select-range-border: #4a62e7;
-$knowl-file-document-select-range-bg: rgba(#4b62e7, 0.1);
-$knowl-file-document-select-rangeing-bg: rgba(#4b62e7, 0.3);
-$ppt-tag-bg-color: rgba($black, 0.5);
-$ppt-tag-color: $white;
-$knowl-file-bg-color: $white;
-$knowl-file-content-right-col-width: 330px;
-$knowl-file-notes-list-bg: #f4f5f6;
-$knowl-file-note-item-bg: $white;
-$knowl-file-note-item-shadow: 0 2px 4px 0 $default-shadow-color;
-
-// 知识管理
-$knowl-mgmt-upload-btn-bg: #4961e6;
-$knowl-mgmt-upload-color: $white;
-$knowl-mgmt-silde-nva: #eceffc;
-$knowl-mgmt-border: #d8d8d8;
-$knowl-mgmt-notes-item-footer-book: rgba(232, 232, 232, 1);
-$knowl-mgmt-notes-item-bg: rgba(249, 249, 249, 1);
-$knowl-mgmt-notes-item-hover-shadws: rgba(0, 0, 0, 0.1);
-$knowl-mgmt-header-totle-color: rgba(17, 17, 17, 1);
-$knowl-mgmt-slide-size-color: #4961e6;
-$knowl-mgmt-tab-header-bg: rgba($white, 0.5);
-
-//我的动态
-$my-action-background: #ffffff;
-$my-action-card-shadow: rgba(5, 5, 5, 0.1);
-$my-action-card-name-color: rgba(17, 17, 17, 1);
-$my-action-card-path-card: rgba(153, 153, 153, 1);
-$my-action-pagination-left: rgba(102, 102, 102, 1);
-$my-action-pagination-total-number-color: #4a62e7;
-// 图谱
-$graph-show-box-shadow-color: $default-shadow-color;
-$graph-show-bg-color: #f4f5f6;
-$graph-show-file-title-color: rgba(17, 17, 17, 1);
-$graph-right-key-shadow-color: rgba(0, 0, 0, 0.15);
-$graph-right-key-title-color: #a1a1a5;
-$graph-auto-entity-color: #4a62e7;
-$graph-user-entity-color: #36bf8f;
-$graph-others-entity-color: #86889d;
 
 // 响应式屏幕大小
 $screen-1024: 1024px;
@@ -357,156 +211,12 @@ $select-width-md: 240px;
 $select-width-lg: 304px;
 $select-width-xl: 648px;
 
-//实体字典
-$dict-entity-header-shadow: rgba(216, 216, 216, 1);
-$dict-entity-list-even-bg: rgba(249, 249, 249, 1);
-$dict-entity-list-hover-bg: rgba(236, 239, 252, 1);
-$dict-entity-list-select: rgba(74, 98, 231, 1);
-$dict-entity-right-show: rgba(244, 245, 246, 1);
-$dict-entity-right-color: rgba(17, 17, 17, 1);
-$dict-entity-right-border: #d8d8d8;
-
-// dashboard
-$dashboard-module-title-font-family: "siyuan-bold";
-$dashboard-module-border-color: $border-color-base;
-$dashboard-module-shadow-color: $default-shadow-color;
-$dashboard-module-title-color: $title-color;
-$dashboard-module-title-icon-color: #b2b2b2;
-$dashboard-module-bg-color: $module-bg-color;
-$dashboard-module-extra-color: rgba($gray-1, 0.5);
-$dashboard-module-extra-color-active: #1f75e0;
-$dashboard-module-extra-btn-color: #646464;
-$dashboard-module-extra-btn-border-color: #d8d8d8;
-$dashboard-module-extra-btn-color-hover: #4990e6;
-$dashboard-module-extra-btn-border-color-hover: #4990e6;
-$dashboard-rank-up-color: rgba(34, 110, 218, 1);
-$dashboard-rank-down-color: rgba(244, 182, 0, 1);
-$dashboard-rank-background-color: rgba(246, 250, 255, 1);
-$dashboard-rank-split-color: rgba(223, 233, 242, 1);
-$dashboard-rank-head-bg-color: #d8d8d8;
-$dashboard-org-username-color: #226eda;
-$dashboard-analysis-card-bg-color: $white;
-$dashboard-communication-analysis-split-color: #f4f5f6;
-$dashboard-analysis-on-color: #226eda;
-$dashboard-analysis-off-color: #dae7f9;
-$dashboard-analysis-inner-color: #44c9a6;
-$dashboard-analysis-outer-color: #e2f4f0;
-$dashboard-analysis-tooltip-label-color: #8c8c8c;
-$dashboard-analysis-tooltip-background-color: #fbfcff;
-$dashboard-team-analysis-card-grey-color: rgba(#9f9f9f, 0.65);
-$dashboard-team-analysis-card-bg-color: $white;
-$dashboard-team-analysis-overview-bg-color: $bg-main-color;
-$dashboard-rank-number-first-color: #e62517;
-$dashboard-rank-number-second-color: #ff950c;
-$dashboard-rank-number-third-color: #36bf8f;
-$dashboard-rank-number-other-color: $gray-1;
-$dashboard-rank-title-color: #f6fafd;
-$dashboard-relation-active-color: #226eda;
-$dashboard-relation-active-circle-color: #eef9ff;
-$dashboard-relation-active-circle-border-color: rgba(#6999f9, 0.31);
-$dashboard-my-team-flag-bg-color: $module-bg-color;
-$dashboard-my-team-flag-btn-edit-color: #226eda;
-$dashboard-my-team-flag-content-default-bg-color: #f4f5f6;
-$dashboard-my-team-flag-content-default-btn-bg-color: #226eda;
-$dashboard-my-team-flag-content-textarea-bg-color: #f4f5f6;
-$dashboard-my-team-flag-content-textarea-color: $gray-1;
-$dashboard-my-team-flag-content-textarea-numtip-color: rgba($gray-1, 0.35);
-$dashboard-my-team-flag-content-bottom-label-color: rgba($gray-1, 0.59);
-$dashboard-my-team-flag-content-bottom-tag-bg-color: #e5e4e5;
-$dashboard-my-team-flag-content-bottom-tag-color: $gray-1;
-$dashboard-my-team-flag-content-bottom-tag-blue-bg-color: rgba(#226eda, 0.15);
-$dashboard-my-team-flag-content-bottom-tag-blue-color: #226eda;
-$dashboard-my-team-flag-input-bg-color: $white;
-$dashboard-my-team-flag-input-border-color: $border-color-base;
-$dashboard-internal-team-user-img-border-color: rgba(#226eda, 0.24);
-$dashboard-internal-team-user-head-color: $white;
-$dashboard-internal-team-user-head-border-color: #c9dcf6;
-$dashboard-internal-team-user-name-color: #2f3a5e;
-$dashboard-internal-team-user-name-color-hover: #226eda;
-$dashboard-internal-liveness-progress-status-color-high: #226eda;
-$dashboard-internal-liveness-progress-status-color-very: #4f8be2;
-$dashboard-internal-liveness-progress-status-color-compare: #7ba8e9;
-$dashboard-internal-liveness-progress-status-color-active: #a7c5f1;
-$dashboard-internal-liveness-progress-status-title-color: $default-text-active-color;
-$dashboard-internal-liveness-box-status-color-high: linear-gradient(
-  180deg,
-  #dde8f9 30%,
-  #a6c5f0 50%,
-  #dde8f9 70%
-);
-$dashboard-internal-liveness-box-status-color-very: linear-gradient(
-  180deg,
-  #ecf3fc 30%,
-  #bcd3f3 50%,
-  #ecf3fc 70%
-);
-$dashboard-internal-liveness-box-status-color-compare: linear-gradient(
-  180deg,
-  #f2f7fd 30%,
-  #d2e2f7 50%,
-  #f2f7fd 70%
-);
-$dashboard-internal-liveness-box-status-color-active: linear-gradient(
-  180deg,
-  #f8fbfe 30%,
-  #e8f0fb 50%,
-  #f8fbfe 70%
-);
-$dashboard-internal-liveness-box-status-color-high-hover: linear-gradient(
-  180deg,
-  #dee6f8 30%,
-  #97baed 50%,
-  #dee6f8 70%
-);
-$dashboard-internal-liveness-box-status-color-very-hover: linear-gradient(
-  180deg,
-  #ecf3fc 30%,
-  #adc9f1 50%,
-  #ecf3fc 70%
-);
-$dashboard-internal-liveness-box-status-color-compare-hover: linear-gradient(
-  180deg,
-  #f2f7fd 30%,
-  #c3d7f5 50%,
-  #f2f7fd 70%
-);
-$dashboard-internal-liveness-box-status-color-active-hover: linear-gradient(
-  180deg,
-  #f8fbfe 30%,
-  #d9e6f8 50%,
-  #f8fbfe 70%
-);
-$dashboard-outer-contact-header-tab-bg-color: $white;
-$dashboard-outer-contact-header-tab-shadow-color: rgba(0, 0, 0, 0.07);
-
-$dashboard-BI-select-item-bg-color: #d4d4d4;
-$dashboard-BI-select-selector-border-color: #d8d8d8;
-$dashboard-BI-select-arrow-bg-color: #c5c5c5;
-$dashboard-BI-select-arrow-color: $white;
-
-// 主题基础信息
-$subject-base-card-box-shadow: $box-shadow-normal;
-$subject-main-color: #226eda;
-$subject-tag-bg-color: $bg-main-color;
-$subject-detail-label-color: $subsidiary-color;
-$subject-attention-color: #ff950c;
-$subject-tag-hover-color: #2b95ff;
-$subject-tag-bg-hover-color: rgba(43, 149, 255, 0.15);
-$subject-base-title-color: $title-color;
-$subject-base-avator-default-bg-color: #86889d;
-$subject-tag-color: $gray-3;
-$subject-popup-base-bg-color: $white;
-$subject-operator-not-allowed-color: rgba($white, 0.45);
-
-$similar-theme-list-similarity-color: #e62517;
-$similar-theme-list-similarity-bg-color: rgba(230, 37, 23, 0.15);
-
 // 左侧菜单收缩按钮
 $left-menu-collapsed-color: rgba($gray-1, 0.65);
 
 // 响应式底部导航shadow
-$footer-nav-height: 64px;
-$footer-nav-shadow: 0 -1px 0 0 $default-shadow-color;
-$footer-nav-icon-size: 24px;
-$footer-nav-default-color: $gray-1;
-$footer-nav-active-color: $primary-color;
+// $footer-nav-height: 64px;
+// $footer-nav-shadow: 0 -1px 0 0 $default-shadow-color;
+// $footer-nav-icon-size: 24px;
+// $footer-nav-default-color: $gray-1;
+// $footer-nav-active-color: $primary-color;
