--- a/src/pages/Proof/index.scss
+++ b/src/pages/Proof/index.scss
@@ -1,4 +1,6 @@
 .proof {
+  max-width: 1300px;
+  margin: 0 auto;
   height: calc(100% - 48px - 24px);
   margin-bottom: $margin-lg;
 
@@ -6,14 +8,7 @@
     display: flex;
     align-items: center;
     margin-bottom: $margin-lg;
-    margin-top: 52px;
-    .proof-header-title {
-      font-size: 22px;
-      font-weight: 500;
-      color: #000000;
-      margin-right: 65px;
-      display: inline-block;
-    }
+    margin-top: 14px;
 
     .proof-header-img {
       width: 24px;
