--- a/src/pages/Transfer/InputAddress.scss
+++ b/src/pages/Transfer/InputAddress.scss
@@ -2,18 +2,19 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 504px;
+  width: 495px;
   height: 80px;
-  background: #f7f8f9;
-  border: 1px solid #d8e0f0;
-  box-shadow: 0px 1px 2px rgba(184, 200, 224, 0.22);
-  border-radius: 14px;
-  padding: $padding-xs $padding-lg $padding-md $padding-lg;
+  background: #f7f8fa;
+  opacity: 1;
+  border-radius: 20px;
+  padding-left: 24px;
+  padding-right: 10px;
 
   .input-label {
     font-size: 14px;
     margin-bottom: 12px;
-    color: #6a6a6a;
+    color: #212121;
+    font-weight: 300;
     margin-top: 4px;
   }
 
@@ -23,26 +24,36 @@
     outline: 0;
     background: #f7f8f9;
     width: 100%;
-    color: $primary-color;
+    color: #404040;
   }
 
-  .balance {
-    font-size: 12px;
-    font-weight: 300;
-    color: #7c7c7c;
-    margin-bottom: 12px;
-    margin-top: 6px;
+  .no-rule {
+    width: 132px;
+    height: 40px;
+    background: #eaecf2;
+    box-shadow: 0px 3px 6px rgba(196, 203, 214, 0.1);
+    opacity: 1;
+    border-radius: 16px;
+    font-size: 16px;
+    color: #999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .program-hash {
-    font-size: 16px;
-    font-weight: 500;
-    color: $primary-color;
-    max-width: 200px;
-    white-space: nowrap;
+    max-width: 150px;
     overflow: hidden;
     text-overflow: ellipsis;
-    line-height: 1.5;
+    white-space: nowrap;
+    padding: 0 24px;
+    height: 40px;
+    background: $primary-2;
+    box-shadow: 0px 3px 6px rgba(196, 203, 214, 0.1);
+    border-radius: 16px;
+    font-size: 16px;
+    color: $primary-color;
+    line-height: 40px;
   }
 }
 
@@ -50,10 +61,13 @@
   border: 1px solid $status-error-color;
 
   .program-hash {
-    color: $status-error-color;
+    background: $status-error-color;
+    color: $white;
   }
 }
 
 .input-address.no-ellipsis {
-  display: block;
+  .wrapper {
+    width: 100%;
+  }
 }
