--- a/src/pages/Transfer/InputBalance.scss
+++ b/src/pages/Transfer/InputBalance.scss
@@ -1,17 +1,29 @@
 .input-balance {
-  width: 504px;
+  width: 495px;
   height: 80px;
-  background: #f7f8f9;
-  border: 1px solid #d8e0f0;
-  box-shadow: 0px 1px 2px rgba(184, 200, 224, 0.22);
-  border-radius: 14px;
-  padding: $padding-xs $padding-lg $padding-md $padding-lg;
+  background: #f7f8fa;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 24px;
+  padding-right: 10px;
 
-  .input-label {
-    font-size: 14px;
-    margin-bottom: 10px;
-    color: #6a6a6a;
-    margin-top: 4px;
+  .balance {
+    display: none;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 24px;
+    color: #7c7c7c;
+    margin-top: 10px;
+    text-align: right;
+    width: 100%;
+  }
+
+  .amount-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
   .input {
@@ -19,7 +31,69 @@
     border: 0;
     outline: 0;
     background: #f7f8f9;
-    width: 100%;
-    color: #afafaf;
+    font-size: 26px;
+    font-family: Kanit;
+    font-weight: 400;
+    color: #404040;
+  }
+
+  input::-webkit-input-placeholder {
+    font-size: 26px;
+    font-family: Kanit;
+    font-weight: 400;
+    color: #b6b7c7;
+  }
+
+  .select-btn {
+    width: 156px;
+    height: 40px;
+    background: $primary-2;
+    box-shadow: 0px 3px 6px rgba(196, 203, 214, 0.1);
+    border-radius: 16px;
+    font-size: $font-size-lg;
+    font-weight: 500;
+    color: $primary-color;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 12px;
+    cursor: pointer;
+
+    > img {
+      width: 24px;
+      height: 24px;
+    }
+  }
+
+  &.selected {
+    height: 100px;
+    .balance {
+      display: block;
+    }
+    .select-btn {
+      width: auto;
+      height: 40px;
+      background: #eaecf2;
+      font-size: 14px;
+      font-weight: 500;
+      color: #0a1629;
+      padding-left: 12px;
+      padding-right: 8px;
+
+      .token-item {
+        padding-top: 6px;
+        font-weight: $font-weight-medium;
+        > img {
+          width: 24px;
+          height: 24px;
+          margin-top: -4px;
+          margin-right: 12px;
+        }
+      }
+    }
+  }
+
+  &.error {
+    border: 1px solid #d75079;
   }
 }
