--- a/src/pages/Submit/index.scss
+++ b/src/pages/Submit/index.scss
@@ -1,25 +1,35 @@
 .submitModal {
   .ant-modal-content {
     width: 600px;
-    height: 544px;
+    height: 489px;
+
+    .item {
+      width: 552px;
+      height: 70px;
+      background: #f7f8f9;
+      border: 1px solid #eaecf2;
+      opacity: 1;
+      border-radius: 20px;
+      padding: 0 16px;
+
+      &.program {
+        margin-top: 20px;
+      }
+    }
+
+    .item + .item {
+      margin-top: 10px;
+    }
 
     .label {
-      font-size: $font-size-base;
+      font-size: $font-size-sm;
       line-height: 24px;
       color: #7c7c7c;
-      margin-top: $margin-md;
+      margin-top: 7px;
       margin-bottom: 3px;
     }
 
     .value {
-      width: 552px;
-      height: 48px;
-      line-height: 48px;
-      padding: 0 16px;
-      background: #f7f8f9;
-      border: 1px solid #d8e0f0;
-      box-shadow: 0px 1px 2px rgba(184, 200, 224, 0.22);
-      border-radius: 14px;
       font-size: $font-size-lg;
       color: #0a1629;
       position: relative;
@@ -45,24 +55,23 @@
       color: $white;
       float: right;
       position: absolute;
-      right: 2px;
-      top: 3px;
+      right: 0px;
+      top: -20px;
       cursor: pointer;
     }
 
     .submit-btn {
-      width: 552px;
-      height: 72px;
-      margin-top: $margin-lg;
+      width: 551px;
+      height: 60px;
+      border-radius: 20px;
+      margin-top: 14px;
       line-height: 72px;
       text-align: center;
       background: $primary-color;
       box-shadow: 0px 6px 12px rgba(63, 140, 255, 0.26);
-      border-radius: 14px;
-      font-size: 20px;
-      font-weight: $font-weight-bold;
+      font-size: 18px;
+      font-weight: $font-weight-medium;
       color: $white;
-      cursor: pointer;
     }
   }
 }
