--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -1,25 +1,24 @@
-.header-search {
-  position: absolute;
-  top: 21px;
-  right: 223px;
-  width: 310px;
-  height: 40px;
-  background: rgba(255, 255, 255, 0.44);
-  box-shadow: 0px 6px 58px rgba(196, 203, 214, 0.1);
-  opacity: 0.44;
-  border-radius: 24px;
-  padding-left: 24px;
-  border: 0;
-  .icon-search {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
-  }
+.search-components {
+  .header-search {
+    width: 231px;
+    height: 34px;
+    background: $white;
+    border-radius: 24px;
+    padding: 0 20px;
+    border: 0;
 
-  input::-webkit-input-placeholder {
-    font-size: 16px;
-    font-family: Kanit;
-    font-weight: 300;
-    color: #7d8592;
+    .icon-search {
+      width: 16px;
+      height: 16px;
+      margin-right: 8px;
+    }
+
+    input::-webkit-input-placeholder {
+      font-size: 12px;
+      font-family: Kanit;
+      font-weight: 300;
+      color: #7d8592;
+      opacity: 1;
+    }
   }
 }
