--- a/src/pages/Proof/ListItem.scss
+++ b/src/pages/Proof/ListItem.scss
@@ -1,5 +1,5 @@
 .proof-list-item {
-  width: 966px;
+  width: 960px;
   background: $white;
   border-radius: 10px;
   padding: 18px 20px;
@@ -71,24 +71,24 @@
       z-index: 1;
       height: 25px;
 
-      > span::after {
-        display: inline-block;
-        animation: ellipsis 1.25s infinite;
-        content: ".";
-        width: 1em;
-        text-align: left;
-      }
-      @keyframes ellipsis {
-        0% {
-          content: ".";
-        }
-        33% {
-          content: "..";
-        }
-        66% {
-          content: "...";
-        }
-      }
+      //   > span::after {
+      //     display: inline-block;
+      //     animation: ellipsis 1.25s infinite;
+      //     content: ".";
+      //     width: 1em;
+      //     text-align: left;
+      //   }
+      //   @keyframes ellipsis {
+      //     0% {
+      //       content: ".";
+      //     }
+      //     33% {
+      //       content: "..";
+      //     }
+      //     66% {
+      //       content: "...";
+      //     }
+      //   }
     }
 
     .progress-bg {
