--- a/src/pages/Proof/index.scss
+++ b/src/pages/Proof/index.scss
@@ -1,14 +1,15 @@
 .proof {
-  max-width: 1300px;
+  width: 960px;
   margin: 0 auto;
-  height: calc(100% - 48px - 24px);
-  margin-bottom: $margin-lg;
+  height: calc(100% - 48px);
 
   .proof-header {
     display: flex;
     align-items: center;
     margin-bottom: $margin-lg;
     margin-top: 14px;
+    height: 34px;
+    justify-content: space-between;
 
     .proof-header-img {
       width: 24px;
@@ -18,6 +19,35 @@
 
     .proof-header-img + .proof-header-img {
       margin-left: $margin-xs;
+    }
+
+    .proof-header-right {
+      display: none;
+
+      &.show {
+        display: flex;
+      }
+
+      .proof-select {
+        margin-right: 21px;
+        width: 134px;
+        height: 34px;
+        background: $white;
+        border-radius: 24px;
+
+        .ant-select-selector {
+          border: none;
+          border-radius: 24px;
+          font-size: 12px;
+          font-family: Kanit;
+          font-weight: 400;
+          color: #000000;
+
+          .ant-select-selection-item {
+            line-height: 34px;
+          }
+        }
+      }
     }
   }
 
