--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,5 +8,40 @@
   backdrop-filter: blur(4px);
 }
 
+.ant-select-dropdown {
+  background: #ffffff;
+  box-shadow: 0px 6px 58px rgba(209, 213, 219, 0.1);
+  border-radius: 10px;
+  color: #555555;
+  padding: 8px 5px;
+
+  .ant-select-item {
+    font-size: 12px;
+    font-family: Kanit;
+    font-weight: 400;
+    color: #555555;
+  }
+
+  .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
+    color: rgba(0, 0, 0, 0.85);
+    font-weight: 600;
+    background-color: $white;
+  }
+
+  .ant-select-item-option-active:not(.ant-select-item-option-disabled) {
+    background: #f6f8fa;
+    border-radius: 6px;
+  }
+}
+
+.ant-select-selector {
+  box-shadow: none !important;
+}
+
+.ant-input-affix-wrapper:focus,
+.ant-input-affix-wrapper-focused {
+  box-shadow: none !important;
+}
+
 @import "./font.scss";
 @import "./reset.css";
