--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -21,8 +21,8 @@
   }
 
   li.active {
-    color: #999999;
-    border-bottom: 1px solid #999999;
+    color: $subsidiary-color;
+    border-bottom: 1px solid $subsidiary-color;
   }
 
   //   li.active::after {
