--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,9 +4,9 @@
   font-family: Kanit;
 }
 
-.ant-modal-mask {
-  backdrop-filter: blur(4px);
-}
+// .ant-modal-mask {
+//   backdrop-filter: blur(4px);
+// }
 
 .ant-select-dropdown {
   background: #ffffff;
