--- a/src/pages/HomePage/index.scss
+++ b/src/pages/HomePage/index.scss
@@ -9,7 +9,14 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    height: calc(100% - $padding-lg);
+    height: 100%;
     overflow: hidden;
+
+    .main-content {
+      height: 100%;
+      width: 960px;
+      margin: 0 auto;
+      overflow-x: auto;
+    }
   }
 }
